Cherry-pick r247934. rdar://problem/53764085

MediaSource.isTypeSupported claims FLAC-in-MP4 support on iOS and macOS, but plays silence
    https://bugs.webkit.org/show_bug.cgi?id=198583
    <rdar://problem/51487853>

    Reviewed by Maciej Stachowiak.

    * platform/graphics/avfoundation/objc/AVStreamDataParserMIMETypeCache.h:
    (WebCore::AVStreamDataParserMIMETypeCache::canDecodeType): Use anParseExtendedMIMEType:
    when it is available.

    Canonical link: https://commits.webkit.org/214047@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247934 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.154@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@248064 268f45cc-cd09-0410-ab3c-d52691b4dbfc